<resources>
    <string name="app_name">GastoViagem</string>
    <string name="dist_ncia">Distância</string>
    <string name="preco">Preco</string>
    <string name="autonomia">Autonomia</string>
    <string name="seu_gasto_total_ser_de">Seu gasto total será de</string>
    <string name="r_0_00">R$ 0,00</string>
    <string name="km_gastos_por_l">Km Gastos por L</string>
    <string name="calcular">Calcular</string>
</resources>